# codex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
src/codex/: __init__.py  __main__.py  main.py
src/codex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli.py  test_main.py
