[project]
name = "codex"
version = "0.1.0"
description = "Codex Python project environment"
authors = [ { name = "user" } ]
readme = "README.md"
dependencies = []
requires-python = ">=3.10"

[project.scripts]
codex = "codex.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
