[project]
name = "codex"
version = "0.1.0"
description = "Open Source Codex OSS project for ChatGPT Pro usage"
authors = [ { name = "ramutomon" } ]
readme = "README.md"
license = { text = "MIT" }
keywords = ["chatgpt", "codex", "oss", "open-source", "python"]
urls = { "Homepage" = "https://github.com/ramutomon/codex", "Repository" = "https://github.com/ramutomon/codex" }
dependencies = []
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
codex = "codex.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
